--- a/i1.markdown
+++ b/i1.markdown
@@ -13,10 +13,10 @@ with passive heat sink and two 10GB/s interfaces https://github.com/larytet/firm
 
 Among the features that can be supported at line rate:
 
-* VLAN tag/untag based on regular expression match.
+* Drop packets base on the RegExp match and protect sensitive systems against malformed packets. 
+* VLAN tag/untag based on RegExp match.
 * Modification of the packet header - MAC source/destination address. Example - multiple devices with the same MAC source addrress. 
 * Add/remove an IP header to the packets matching specific RegExp.
-* Drop packets base on the RegExp match.
 
 Appears, that there is no high performance equipment which works with non-IP (non-IP is a 
 crucial part) packets. It appears also that a large military equipment company really wants 
