--- a/i1.markdown
+++ b/i1.markdown
@@ -22,6 +22,7 @@ Among the features that can be supported at the line rate:
 * VLAN tag/untag based on RegExp match. Simplifies management multiple devices.
 * Modification of the packet header - MAC source/destination address. Example - multiple sensors with the same MAC source addrress. 
 * Add/remove an IP header in the packets matching specific RegExp. Converts non-IP packets created by legacy devices to IP packets which can be routed by the existing IP infrastructure.
+* Up to 10Gb/s line rate decryption/encryption using symmetric keys. 
 
 Appears, that there is no high performance equipment which works with non-IP (non-IP is a 
 crucial part) Ethernet packets and specifically with proprietary non-documented protocols. 
